0.6.6	UNRELEASED

 BUG FIXES

  * Warn about ignoring path segment parameters when using bzr
    2.4. (Jelmer Vernooij, #887785)

  * Don't request unpeeled objects, newer versions of github refuse it.
    (Jelmer Vernooij, #897951)

  * Specify proper number of arguments to action() handler.
    (Jelmer Vernooij, #894195)

0.6.5	2011-11-08

 CHANGES

  * git-import no longer creates a deep hierarchy to store branches,
    instead it now strips the refs/heads/ prefix from ref names.
    (Jelmer Vernooij)

  * Bzr 2.3 is no longer supported. (Jelmer Vernooij)

 FIXES

  * Fix compatibility with bzr < 2.5 when used with remote repositories.
    (Jelmer Vernooij, #885566)

  * Fix git-import after branch refactoring. (Jelmer Vernooij, #886161)

  * git-import now creates colocated branches if the target bzrdir
    supports them. (Jelmer Vernooij)

0.6.4	2011-11-03

 FIXES

  * Fix and test fetching from "bzr serve --git". (Jelmer Vernooij)

  * Raise UnsupportedOperation for `Branch.revision_id_to_dotted_revno`,
    making it possible to run ``bzr tags`` against remote git repositories.
    (Jelmer Vernooij, #858942)

  * Fix compatibility with bzr < 2.5. (Jelmer Vernooij, #885566)

 FEATURES

  * Allow downloading branches over HTTP from loggerhead using the Git protocol.
    To enable, set 'http_git=True' in the branch configuration.
    (Jelmer Vernooij, #585822)

0.6.3	2011-11-01

 FIXES

  * Only actually fetch tags if "branch.fetch_tags" is set to true.
    (Jelmer Vernooij, #771184)

  * Add basic support for alternates. (Jelmer Vernooij)

  * Support addressing branches by ref where the name can't be mapped back to
    a branch. (Jelmer Vernooij, #829481)

  * Skip post commit hook when dulwich is not available.
    (Jelmer Vernooij, #853974)

  * Fix pushing from git repository to git repository.
    (Jelmer Vernooij, #731270)

  * Friendlier error message when HEAD can not be found in remote repository.
    (Jelmer Vernooij, #778920)
